@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX mlocate-cron.conf 237 SHA256 856c1ab465b3e7ffdf752ba323bea9867ac902297fc4247ae15a575419b279c7 SHA512 ab055b052980783b5c63c716d7c12dcb19961a9f990c077e4f8c9bef4ca591bd281ac3941f872659a558a18b81c014dbc0655ff0a1872310670d8efc1d27cb00 WHIRLPOOL f7974d6514f52727c1b5213ded5f2050067afcc1eb9666da55a07845eab06fccfb27d100be102c0169b95b12c0244d0d62019d35d4596fc672216e5b152f3150
 AUX mlocate.cron-r2 1297 SHA256 dfceec061a018f2976f18b8ba874dc152cd9ee4595a6f9a25a6ef5307aeacae9 SHA512 d2f3790a52b426df0482836f15632e46d3e651aa64bf60f2048339723e01007bf59002b900e5d4137fb8e4c5d4d9df1c4351741f6600cc9784e347561093f691 WHIRLPOOL d107c2080ed22cf5107ce55312cc839fa6d252788fdb954ffb823378b02cf7684ce791bb9b764114d65ea63c76be4fabe04e8c8cf89d37dac951e893322db145
@@ -7,23 +7,23 @@ AUX updatedb.conf 967 SHA256 afa4b1f5e7617f288ca83cfab3e8553b1ba92cb878f0f15a6f4
 DIST mlocate-0.25.tar.xz 355900 SHA256 ab95c111f9dba35b5690896180dd0a7639dbf07d70b862fcb0731264d9273951 SHA512 14cf6b3244fad63c9cc3a546b07570aa914740801d5f97a619b8dca79e1ff77e01b6debd920bfb95d36de5fc445f0f915eab972598b424a94cd018a93b47a2eb WHIRLPOOL 3d8052d41b37ee75aa807665744df79d39c648c8b0ffc0846ae29f216ba35072224faa8861983fc17816d7799afe3b6c7eee7b89f127e97647fcb05e427b925e
 DIST mlocate-0.26.tar.xz 359204 SHA256 3063df79fe198fb9618e180c54baf3105b33d88fe602ff2d8570aaf944f1263e SHA512 b1207047e30a551cba39e70812439b554def567ebe9b8b81fed6f26435bb575beafe4875a21cd72876eadd85da4e7bfc942eb28b17c430b537c351690364837f WHIRLPOOL 7f0a2df135ce2ec74f2a113e7f88b29f3964aa53fff1c47eb9aa44df4447d7b41b59615571a7626a3b7395208df75641d407b7a9456e590338962cde85093129
 EBUILD mlocate-0.25.ebuild 1683 SHA256 8789e890d7222bc77958883f39bc5e5bb5bb125e8ebce05950d1242c06fd6e59 SHA512 f98ef790498b1824e58018b57f45693a9b2af24cf4330aafae8891c9ca40f3c32b8ab1d5c6e1faf9894cfe67f32dab207ef8a33f371925215938f7bc9b77e47f WHIRLPOOL e27c76add5d03cadb764f044237e80b9e048b6ab58987225109a9905e1e2251bf2b1bb4f96a55a2380f8c72b3465891123aa1a2cc6d4b1d4198fe8ea785151c4
-EBUILD mlocate-0.26.ebuild 1694 SHA256 00669e863102cbdfea9033e02820b3a24c5fa5f671451dd11cee966c5658c8e9 SHA512 f1a015727984c6b2b7dabc94cffc7e5dd9626c5530cbdc34be3a3a726251aa36250a6307505944d6de24c2adf916ced4f0447bfd2c1f5ac912492d7152f316b0 WHIRLPOOL d61214eb38a271b8945f86442b73776c5553b7d636ded79a30f5c3aa2f742687ad427660f8114979ca715ae6fac1b3f3ba369cb4b214bd4f2f794c4bb1a3350f
-MISC ChangeLog 13163 SHA256 e15a3f4474ba776550a6e6805619d485bb3bddbdf34225a883cbce42a146e0d4 SHA512 f4ae27b055104faefcaae1bfe4d62c69c53215df36ab4e4060f7072df766d61d3f4899b6b37ed1386e5d326601240a43f02d8970d700f5af9f5a3d1515f0a146 WHIRLPOOL 7476fc908983da5ee05ccd430d14294c840f8d5592b39951a484c8a1185f3297d81909dce6389c21fe25c576b41349fbadb831f3f35bdfa3dccf14f8a7b48b0d
+EBUILD mlocate-0.26.ebuild 1687 SHA256 82e9493403f4fba28f90cc69a2f4dd0b9014988155cfd3d2edf00c27e4bd7234 SHA512 ef7b16b7da7fcc303df436ef86e94828de5d2909b858369caf2144e2be06c533e69458965a48e456ba600e912c840f2503319415293b51572a4cdd7aa2b86253 WHIRLPOOL 71812ba92116a74fdc90bf36ab26b49c7f88dea41019a9733dafb602e1c7504f48447c767a47bebec705da74ec6651d75b5a0097160e11a3fd067e40ea8a0b61
+MISC ChangeLog 13264 SHA256 a73d19a2fb7937f5eaf02340119d5e1166aa3d6eb8f3b91e12ed854f6dfc4553 SHA512 165ea5466e04285666b499adbaadec2b87c9169828b2a850a54182109361e860b4aad6a3b2de423ef12c810bf883e7e17715b810e51116509ce5688b2405b61f WHIRLPOOL 13d5803a7b026d93f523c96642810ac667c7897a900ac7286110d07b2fd89db11add9d6a49b4e33de4e84ec939d38650013e6c03bed70d516620287303f5060c
 MISC metadata.xml 269 SHA256 76fb556342434f4a8ba872bc6dbb7a21f625b5fbd001ee467141d6b710ae82c6 SHA512 45237b40e8f574dd054749e552b73a1f980a34583ff1972eaef603cc4cfba56dee59a7dc2566afa3fe8f663225b0eb666ab3fc088b22220103a397809c2c9f72 WHIRLPOOL 691a8f0df73feb0f318622e083147e6ca05b203dc6aa26a4aa787f9b84050800077c6474d9ef2b667bfc94a138712a13c716ca7ffab3efe10122781e41510e77
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQoPRjAAoJEOSiRoyO7jvogn0QAJganotlsT4IShtkMxym8QzY
-7X5W4hxPE1cGmBdsoN58DxFT6TyC2seFg+rfHpCbI7xESsQyb+0rvhRlu2LDMLab
-+DBvPJIRkTdk89aTjrf9SWrWJcvr6OOBIoRgrP4wB9Kjcp0SHz5A/qLHn2rRhqQh
-PtX7PL4jYt3Kz8iLeCMh+3S5Wx3SlGzM8lGvQviyl0EsNLvZqHPSBC2SLYyM8ASq
-b0hxxgjug3VX/M8sIuuKxHGZXODytugMN0BcUx8jWa/KVTp3CTWqyvOCUFc6nEjz
-QnmXr/Z0DSUDctlI23L1r2USd/vtwYNOlV3oCCUS33pJuK9kg5qbr2vF2rFhpURf
-/klQ6ByPJUb8dlNgDOLYJbFn/dlOeDLWKz2iNDMGVSt/dVzA794LTs2X+yDb9A3s
-QyUMq0XMCp7UG+mk4VMI6LR/HmXmskD2++tGoZsNLj+VuvTg8Igmlv1DZilt1eOz
-HPNx/QsHLmXbfEWPNKt+k1Us1NLP+0QDaJZ0RwZuBpH9PIvY6QdCiE+fCNiCJNXd
-NdmOUOhbTLdSalereAwgvbruZoJduvBU0bomsFe6fPWphjL3CFOjEplsG4HJoYev
-G25eVJ4kd357ZWoYRnJE7qdhOmjw7ZJge7ia16HSAZ2bn9tRwKSNqbX67KvWyNiL
-zs9tvPVD/H+0m2+gIVmJ
-=hzfW
+iQIcBAEBCgAGBQJRfFLdAAoJELp701BxlEWfUNoQAKZ8kMt9QYX67zC6UVnLQ1qc
+LQJ1/klKOdRZOt1Gp1XIIz7BMM4qesVGNzS7mRYFXQtn8Msg7fkKw0MPb3bbiXr/
+E4i30bTYZXj9UupsJQfD6oAQKDmcVTJKO8XUaM9gjF+zOPtYKeooafVO3JPYiKem
+P92DpHilkWqNIgeFnExPKvd0yHA3U7DdMuVkA/dTfAtdJCwSXFOTT4rI6+AP+HKV
+HF9IVJxAnjjqu0JpjGww4p+mpLk3cGD9iVCvYBAjjQjc8UaWxjaR3JzlnvfvGGhG
+WI5cYU5eg+eAtNKQxQidKrQjWZRlcG+5tU2igS0vP4Txqj70hgBJnLlZknyWMgGZ
+mpv8vf7tA2QTUAY8Izs2F3LLAtYyAJPLHFn2l2XIV7pJA8Vznwwrrubh47JjVd0V
+Pl2CF3E0vmPKt7VnUXx3RvdYjxDFbgQZwyIE7K69Hv1bzvbcHJi4S8DzNED8MD+2
+BEICuCmQNE7KuALMg7eMGdZw73dVNYPkMEo91BUhBLFa903vGKB0phxF3ImDVpJW
+jiTG6fxOXnWdHG7sIjhbe1jvxEofQSZ1Qu2cx1Z4UVEkM5DygofZdh0RxuPqyn7E
+j9KIlga0sdcOCLXO/qMGpG2L1DbQhs+stifWCLRhXFdbRtMEhr3dqphuaM5wXLZo
+TbExR8sl448Irqn6Spmd
+=i9M4
 -----END PGP SIGNATURE-----
