@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/mlocate
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mlocate/ChangeLog,v 1.106 2012/11/12 13:07:30 scarabeus Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mlocate/ChangeLog,v 1.107 2013/04/27 22:36:15 ago Exp $
+
+  27 Apr 2013; Agostino Sarubbo <ago@gentoo.org> mlocate-0.26.ebuild:
+  Stable for amd64, wrt bug #467514
 
 *mlocate-0.26 (12 Nov 2012)
 
